# nauci-api

./: .gitignore  Dockerfile  LICENSE  README.md  deploy.sh  gunicorn.py  manage.py  mydatabase  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yaml
nauci_service/: db.sqlite3
nauci_service/apps/accounts/: admin.py  apps.py  serializers.py  urls.py  views.py
nauci_service/apps/accounts/migrations/: 0001_initial.py  0004_useraccount_tutor.py
nauci_service/apps/accounts/models/: __init__.py  user_account.py
nauci_service/apps/core/: apps.py
nauci_service/apps/core/models/: __init__.py
nauci_service/apps/tutors/: admin.py  apps.py  serializers.py  urls.py  views.py
nauci_service/apps/tutors/migrations/: 0001_initial.py  0002_alter_tutor_picture.py  0003_remove_tutor_oblast_predavanja_and_more.py  0004_certificate_certificate_certificate_description_and_more.py  0005_certificate_document_alter_tutor_picture_education.py  0006_tutor_headline_tutor_introduce_tutor_methodology.py
nauci_service/apps/tutors/models/: __init__.py  tutor.py
nauci_service/config/: asgi.py  urls.py  wsgi.py
nauci_service/config/settings/: __init__.py  common_django.py  environment.py
tests/: test_tutors_api.py
tutors_service/: manage.py
tutors_service/apps/accounts/: admin.py  apps.py  serializers.py
tutors_service/apps/accounts/models/: user_account.py
tutors_service/apps/core/: apps.py
tutors_service/config/: asgi.py  urls.py  wsgi.py
tutors_service/config/envs/: .env
tutors_service/config/settings/: common_django.py  environment.py
(+3 files in other folders)
